--- a/src/pages/Locationpage.css
+++ b/src/pages/Locationpage.css
@@ -19,15 +19,9 @@
   overflow: hidden;
   -ms-flex-pack: distribute;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: 30px;
 }
-.addlocation-image {
-  height: 550px;
-  margin-left: 20px;
-  background-repeat: no-repeat;
-  /* background-image: url("../images/profilepage.jpeg"); */
-  background-size: contain;
-}
+
 .addlocation-heading {
   font-size: 20px;
   padding: 10px;
@@ -44,128 +38,132 @@
   justify-content: center;
   margin-bottom: 80px;
 }
+
+.address-head {
+  font-weight: 600;
+  font-size: 1.5rem;
+  margin-bottom: 0.8rem;
+}
 .addloc-form {
-  display: -webkit-box;
-  display: -ms-flexbox;
+  width: 30rem;
+}
+
+.flex-form {
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
+  width: 100%;
   justify-content: space-between;
 }
+
+.form-group .extend {
+  width: 100%;
+}
+
 .form-group {
   font-family: "Ubuntu", sans-serif;
-  font-size: 16px;
+  font-size: 15px;
   margin-top: 0.5rem;
   font-weight: bold;
 }
 
-.form-group .textarea {
-  margin-bottom: 10px;
-}
 .addloc-addtype-wrapper {
   margin: 10px 0;
 }
 
 .addloc-btn {
-  font-weight: bold;
-  margin: 15px 0px;
-  width: 20%;
-  padding: 7px;
-  border: 1px solid;
+  display: flex;
+  justify-content: center;
+  margin: 30px auto;
+  width: 80%;
+  padding: 10px;
   border-radius: 5px;
-  background-color: var(--primary-color);
-  color: white;
+  background: #b2eeee;
+  color: black;
+}
+
+.addloc-btn:hover{
+  background: #ceffff;
 }
 .addloc-input {
-  border: 1px solid var(--primary-color);
+  border: 1px solid  black;
   border-radius: 5px;
-  margin-top: 0.4rem;
-  height: 2rem;
-  width: 19rem;
+  margin: 0.5rem 0;
+  width: 14rem;
+  padding-left: .5rem
 }
 
-.addloc-column {
-  float: left;
-  width: 50%;
-  /* margin-right: 1rem; */
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  appearance: none;
+  margin: 0;
+  -moz-appearance: textfield;
 }
 
-/* Clear floats after the columns */
-.addloc-row:after {
-  content: "";
-  display: table;
-  clear: both;
+input[type="text"]::placeholder,input[type="number"]::placeholder,textarea::placeholder{
+  padding-left: 1.5rem;
 }
-#add-longtext {
-  width: 40rem;
-  height: 50%;
+
+textarea::placeholder{
+  padding-top: .4rem;
+}
+
+.addloc-input:not(textarea) {
+  height: 2.3rem;
+}
+
+textarea.extend {
+  margin-bottom: 10px;
   resize: none;
-  margin-bottom: -0.8rem;
-}
-#checkbox-label {
-  font-size: small;
-}
-.addloc-select {
-  margin-top: 10px;
-  width: 12rem;
-  padding: 0.3rem;
-  border: 1px solid var(--primary-color);
-  border-radius: 5px;
 }
 
-input[type="checkbox"],
-input[type="radio"] {
-  vertical-align: -2px;
-  margin-right: 2px;
-  padding: 0;
-}
-
-@media only screen and (max-width: 600px) {
-  .addloc-form {
-    margin: 10px 50px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    justify-content: center;
-  }
-  .addloc-row {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    margin-top: 10px;
-    justify-content: center;
-  }
-  .addloc-btn {
-    width: 8rem;
-    font-size: 14px;
-    padding: 10px;
-    margin: 15px auto;
-  }
-  .addlocation-image {
-    display: none;
-  }
-  #add-longtext {
-    width: 20rem;
+@media only screen and (max-width: 768px) and (min-width: 531px){
+  textarea.extend {
+    height: 2.3rem
   }
 }
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 530px) {
   .addloc-input {
-    width: 15rem;
-  }
-  #add-longtext {
-    width: 15rem;
+    width: 11rem;
+    margin: 0;
+    padding-left: .4rem;
   }
 
   .addloc-form {
-    margin: 10px;
+    width: 23rem
   }
+
+  .form-group:not(.textarea-group){
+    width: 48%;
+  }
+
+  textarea.extend{
+    margin-bottom: -.4rem;
+  }
+
+  input[type="text"]::placeholder,input[type="number"]::placeholder,textarea::placeholder{
+  padding-left: 0.5rem;
+}
+}
+
+@media only screen and (max-width: 425px){
+  .addloc-form{
+    width: 15rem;
+  }
+
+  .addloc-input{
+    width: 7.35rem;
+  }
+
+  .form-group:not(.textarea-group){
+    width: 49%;
+  }
+
+    input[type="text"]::placeholder,input[type="number"]::placeholder,textarea::placeholder{
+  padding-left: 0rem;
+}
+
+.addloc-btn{
+  width: 100%;
+}
 }
