chnages made by harsha

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -8,10 +8,11 @@
   height: auto;
   padding: 50px 100px;
   padding-bottom: 10px;
-  background: white;
+  background: #ecf4f4;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  background: #ecf4f4;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
@@ -57,7 +58,7 @@
   left: 0;
   width: 40px;
   height: 2px;
-  background: #f5fafc;
+  background: #8fd4f1;
 }
 
 .footer p {
@@ -97,7 +98,7 @@
 }
 
 .some li a:hover {
-  background: #eaf2f5;
+  background: #8fd4f1;
 }
 
 .some li a .fa {
@@ -189,7 +190,6 @@
 @media screen and (max-width: 1024px) {
   .footer {
     padding: 40px;
-    background: white;
   }
   .footer .ft-container {
     -webkit-box-orient: vertical;
@@ -208,9 +208,6 @@
 }
 
 @media screen and (min-width: 1200px) {
-  .footer{
-    background: white;
-  }
   .contact {
     margin-right: 200px !important;
   }
@@ -232,15 +229,16 @@
 @media screen and (max-width: 450px) {
   .mobile-footer .css-1elwnq4-MuiPaper-root-MuiAccordion-root {
     box-shadow: none !important;
+   
   }
 
   .mobile-footer .css-1elwnq4-MuiPaper-root-MuiAccordion-root:before {
-    background-color: rgb(249 249 249) !important;
+    background-color: rgb(249 249 249)  !important;
   }
   .mobile-footer {
     width: 85%;
     display: block;
-    background-color: #fff !important;
+    background-color: #fff!important;
     padding: 45px 0px;
     margin: 0px 26px;
   }
@@ -300,7 +298,7 @@
   .mobile-footer {
     width: 95% !important;
     display: block;
-    background-color: #fff !important;
+    background-color: #fff!important;
     padding: 45px 0px !important;
     margin: 0px 10px !important;
   }
