--- a/src/components/skeleton/homeSkeleton.css
+++ b/src/components/skeleton/homeSkeleton.css
@@ -1,25 +1,28 @@
 .card {
   display: flex;
   margin-left: 20px;
-  width: 280px;
+  width: 430px;
   height: 432px;
   padding: 1rem;
   margin-bottom: 10px;
 }
 
 .img-section {
-  width: 250px;
+  width: 100%;
   height: 340px;
   margin-bottom: 5px;
 }
 .text-section {
   width: 250px;
+  width: 100%;
 }
 .height-skeleton {
   height: 340px;
+  
 }
 .text-skeleton {
   height: 50px;
+
 }
 
 @media only screen and (max-width: 320px) {
