--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -12,7 +12,7 @@
 }
 
 .mask{ 
-  mask-image: linear-gradient(180deg, rgba(0, 0, 0, 1) 70%, transparent 100%);
+  mask-image: linear-gradient(180deg, rgba(0, 0, 0, 1) 70%, transparent 95%);
 }
 
 @media only screen and (max-width: 320px) {
@@ -178,6 +178,7 @@
   margin: 40px 65px 10px 78px;
   width: 427px;
   text-align: center;
+  border-radius: 10px !important;
 }
 .data-banner {
   height: 560px !important;
@@ -263,6 +264,11 @@
   }
 }
 /* Small devices (portrait tablets and large phones, 600px and up) */
+@media screen and (min-width:250px) and (max-width:300px) {
+  .data-banner-container1,.data-banner-container{
+    margin-left: 13px !important;
+  }
+}
 @media only screen and (max-width: 450px) {
   /* .collection-item-image {
     width: 180px !important;
