--- a/src/pages/Whishlist.css
+++ b/src/pages/Whishlist.css
@@ -86,17 +86,17 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  gap: 40px;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
-  flex-direction: column;
+  flex-direction: row;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
   -webkit-box-align: start;
-  -ms-flex-align: start;
-  align-items: flex-start;
-  margin-top:20px;
+  -ms-flex-align: center;
+  align-items: center;
 }
 .wish-btn {
   background-color: #b2eeee;
@@ -111,6 +111,10 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+}
+
+.wish-del {
+  color: red;
 }
 
 @media only screen and (max-width: 768px) {
@@ -170,12 +174,10 @@
   .product-button-cart {
     padding: 15px 15px;
   }
-  .wish-btn {
-    padding: 7px 5px;
-    margin: 5px;
-  }
   .wish-btns {
-    justify-content: center;
+    justify-content: space-around;
     flex-direction: row;
+    gap: 0;
+    margin-top: 10px;
   }
 }
